# SDiZO2

./: CMakeLists.txt  DrzewoSpinajace.cpp  DrzewoSpinajace.h  ElementListy.h  Graf.cpp  Graf.h  Interfejs.cpp  Interfejs.h  Testy.cpp  Testy.h  main.cpp  plik.txt
